logs/django-oraclepool.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_oraclepool-1.4.egg-info'...
Listing './lib/python3.5/site-packages/oraclepool'...
Compiling './lib/python3.5/site-packages/oraclepool/base.py'...
***   File "./lib/python3.5/site-packages/oraclepool/base.py", line 26
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oraclepool/creation.py'...
***   File "./lib/python3.5/site-packages/oraclepool/creation.py", line 68
    print 'Using Test Database %s' % test_db
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/oraclepool/tests'...
Listing './lib/python3.5/site-packages/oraclepool/tests/aggregates'...
Listing './lib/python3.5/site-packages/oraclepool/tests/apitest'...
Compiling './lib/python3.5/site-packages/oraclepool/tests/apitest/dbapi20.py'...
***   File "./lib/python3.5/site-packages/oraclepool/tests/apitest/dbapi20.py", line 637
    raise NotImplementedError, 'Helper not implemented'
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/oraclepool/tests/apitest/tests.py'...
***   File "./lib/python3.5/site-packages/oraclepool/tests/apitest/tests.py", line 14
    print 'Database engine %s' % settings_dict['ENGINE']
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/oraclepool/tests/monkeypatches.py'...
***   File "./lib/python3.5/site-packages/oraclepool/tests/monkeypatches.py", line 12
    print 'Monkey patching for using existing database for tests'
                                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/oraclepool/tests/nulls'...
Listing './lib/python3.5/site-packages/oraclepool/tests/performance'...
Listing './lib/python3.5/site-packages/oraclepool/tests/performance/fixtures'...
Compiling './lib/python3.5/site-packages/oraclepool/tests/performance/tests.py'...
***   File "./lib/python3.5/site-packages/oraclepool/tests/performance/tests.py", line 47
    print "\n-----------------------------------------------"
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/oraclepool/tests/regress'...
Compiling './lib/python3.5/site-packages/oraclepool/tests/regress/tests.py'...
***   File "./lib/python3.5/site-packages/oraclepool/tests/regress/tests.py", line 25
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/oraclepool/tests/slicing'...
Listing './lib/python3.5/site-packages/oraclepool/tests/slicing/fixtures'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
